syntax = "proto3";

option go_package = "central";

package central;

import "storage/cluster.proto";

message DeploymentEnvironmentUpdate {
    repeated string environments = 1;
}

message ClusterStatusUpdate {
    // Making it a oneof for future proofing.
    oneof msg {
        storage.ClusterStatus status = 1;
        DeploymentEnvironmentUpdate deployment_env_update = 2;
    }
}

message RawClusterHealthInfo {
    storage.CollectorHealthInfo collector_health_info = 1;
}
